app/assets/scss/components/miscellaneous/index.scss
.cbd-accordion {
  --bs-accordion-active-bg: var(--cbd-content-accent);
  --bs-accordion-active-color: var(--cbd-tertiary-body);
  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
}

.badge {
  background-color: var(--bs-primary);
}

.embedIframe {
  width: 100%;
}

.wp-block-example-faq-block {
  .accordion {
    overflow: hidden;
    --bs-accordion-active-bg: var(--cbd-content-accent);
    --bs-accordion-active-color: var(--cbd-tertiary-body);
    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
    .accordion-item {
      box-shadow:
        inset 0 1px var(--bs-accordion-border-color),
        inset 0 -1px var(--bs-accordion-border-color);
      .accordion-header {
        .accordion-button {
          font-size: 1rem;
          font-weight: normal;
        }
      }
      .accordion-body {
        font-size: 1rem;
        font-weight: 400;
      }
    }
    .accordion-item:nth-child(2n + 1) {
      .accordion-header {
        .accordion-button {
          background-color: var(--bs-accordion-btn-bg);
        }
        .accordion-button:not(.collapsed) {
          background-color: var(--bs-accordion-active-bg);
        }
      }
    }
  }
}

.wp-block-quote {
  padding: 1rem 1rem 1rem 3.5rem;
  position: relative;
  z-index: 1;
  border: none;
  box-shadow: -0.5rem 0 var(--cbd-content-accent);
  background-color: var(--bs-secondary-bg);
  &::before {
    content: "\201C";
    line-height: 1;
    font-family: "Noto Serif", serif;
    font-size: 6rem;
    position: absolute;
    top: 0;
    left: 0.5rem;
    z-index: -1;
    color: var(--cbd-content-accent);
    opacity: 0.5;
  }
}

.wp-block-pullquote {
  padding: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  box-shadow:
    0 -0.25rem var(--cbd-content-accent),
    0 0.25rem var(--cbd-content-accent);
  background-color: var(--bs-secondary-bg);

  blockquote {
    position: relative;
    z-index: 1;
    &::before,
    &::after {
      line-height: 1;
      font-family: "Noto Serif", serif;
      font-size: 6rem;
      position: absolute;
      z-index: -1;
      color: var(--cbd-content-accent);
      opacity: 0.5;
    }
    &::before {
      content: "\201C";
      top: -3rem;
      left: -3rem;
    }
    &::after {
      content: "\201D";
      top: 100%;
      right: -3rem;
    }
  }
}

.wp-block-image.size-full {
  img {
    width: 100%;
  }
}

.wp-block-columns {
  min-width: 0;
}

.wp-block-column {
  min-width: 0;
  flex: 1;
  padding: 1rem;

  > figure {
    margin: -1rem -1rem 0;
  }

  img {
    max-width: 100%;
    height: auto;
  }
}

